--- a/client/macaronshop/src/app/components/Views/card/card.component.html
+++ b/client/macaronshop/src/app/components/Views/card/card.component.html
@@ -8,7 +8,7 @@
   <div class="main__links">Главная > Каталог > Готовые наборы</div>
   <div class="card__view">
     <div class="card__view_show">
-      <img class="card__main_img" src="../../../../assets/buckets.png"/>
+      <img class="card__main_img" src="../../../server/src/main/resources/static"/>
       <div class="card__view_imgs">
         <img class="card__side_img" src="../../../../assets/buckets.png"/>
         <img class="card__side_img" src="../../../../assets/buckets.png"/>
