--- a/client/macaronshop/src/app/components/Views/main/main.component.html
+++ b/client/macaronshop/src/app/components/Views/main/main.component.html
@@ -16,17 +16,16 @@
     <div>Без печати</div>
   </div>
   <div class="main__cards">
-    <div *ngFor="let item of items" routerLink="card"  class="box__card">
+    <div *ngFor="let item of items" [routerLink]="'card/' + item.itemId"  class="box__card">
       <div class="box__card_info">
         <img src="../../../../assets/buckets.png"/>
         <div class="box__content">
-          <div class="box__name">Сердце</div>
-          <div class="box__title">24 штуки в коробке в виде сердца. <br>
-            Ассорти из 6 вкусов
+          <div class="box__name">{{ item.name }}</div>
+          <div class="box__title">{{item.title}}
           </div>
         </div>
         <div class="box__buttons">
-          <div class="box__buttons_cost">2800 руб</div>
+          <div class="box__buttons_cost">{{ item.price }} руб</div>
           <div class="box__buttons_add">В корзину</div>
         </div>
       </div>
